--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-TELEGRAM_BOT_TOKEN=your_bot_token_here
-ALIEXPRESS_AFFILIATE_ID=your_affiliate_id_here
-ALIEXPRESS_API_KEY=your_api_key_here 
+# Telegram Bot Token
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+
+# AliExpress Affiliate ID
+ALIEXPRESS_AFFILIATE_ID=your_aliexpress_affiliate_id_here
+
+# AliExpress API Credentials
+ALIEXPRESS_API_KEY=your_aliexpress_api_key_here
+ALIEXPRESS_API_SECRET=your_aliexpress_api_secret_here 
