--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ python-telegram-bot==20.7
 aiohttp==3.9.3
 beautifulsoup4==4.12.3
 python-dotenv==1.0.1
+python-aliexpress-api==3.1.0
 schedule==1.2.1 
